TopScript/src/topscript/TopScript.java
/* Generated By:JJTree&JavaCC: Do not edit this line. TopScript.java */
package topscript;

import recovery.*;

public class TopScript/*@bgen(jjtree)*/implements TopScriptTreeConstants, TopScriptConstants {/*@bgen(jjtree)*/
  protected static JJTTopScriptState jjtree = new JJTTopScriptState();public static void main(String args [])
  {
    System.out.println("\ud83d\udd1d");
    System.out.println("Reading from standard input...");
    System.out.println("Entra o programa top:");
    new TopScript(System.in);
    try
    {
      SimpleNode n = TopScript.Start();
      n.dump("-- > ");

      System.out.println("Vlw.");
    }
    catch (Exception e)
    {
      System.out.println("\u005cn\ud83d\ude22.");
      System.out.println(e.getMessage());
    }
  }

  static public String im(int x)
  {
    int k;
    String s;
    s = tokenImage[x];
    k = s.lastIndexOf("\u005c"");
    try {
      s = s.substring(1,k);
    }
   catch (StringIndexOutOfBoundsException e) {}
   return s;
  }

  static Token lastError = null;
  static boolean eof;    // variável que indica se EOF foi alcançado

  // o método abaixo consome tokens até alcançar um que pertença ao conjunto
  // de sincronização
  static void consumeUntil(RecoverySet g, ParseException e, String met) throws ParseEOFException, ParseException
  {
  Token tok;
  System.out.println();
  System.out.println("*** " + met + " ***");
  System.out.println("     Conjunto de sincroniza\u00e7\u00e3o: " + g);

  if (g == null) throw e; // se o conjunto é null, propaga a exceção

  tok = getToken(1); // pega token corrente
  while ( ! eof ) { // se não chegou ao fim do arquivo
    if ( g.contains(tok.kind)) {//achou um token no conjunto
      System.out.println("     Encontrado token de sincroniza\u00e7\u00e3o: " +
                         im(tok.kind));
      break;
    }
    System.out.println("     Ignorando o token: " + im(tok.kind));
    getNextToken();     // pega próximo token
      tok = getToken(1);
    if (tok.kind == EOF && ! g.contains(EOF) ) // fim da entrada?
        eof = true;
  }
    if ( tok != lastError) {
    System.out.println(e.getMessage());
    lastError = tok;
  }
  if ( eof )
    throw new ParseEOFException("Encontrei EOF onde n\u00e3o deveria.");
  }

// FIM da tentativa de resolver o NUMERO com prefixos comuns
  static final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      top();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * HC SVNT DRACONES
 * Não terminais
 */
  static final public void letraMinuscula() throws ParseException {
                          /*@bgen(jjtree) letraMinuscula */
  SimpleNode jjtn000 = new SimpleNode(JJTLETRAMINUSCULA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LETRA_MINUSCULA);
    } finally {
                              if (jjtc000) {
                                jjtree.closeNodeScope(jjtn000, true);
                              }
    }
  }

  static final public void letraMaiuscula() throws ParseException {
                          /*@bgen(jjtree) letraMaiuscula */
  SimpleNode jjtn000 = new SimpleNode(JJTLETRAMAIUSCULA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LETRA_MAIUSCULA);
    } finally {
                              if (jjtc000) {
                                jjtree.closeNodeScope(jjtn000, true);
                              }
    }
  }

  static final public void numero() throws ParseException {
                  /*@bgen(jjtree) numero */
  SimpleNode jjtn000 = new SimpleNode(JJTNUMERO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NUMERO);
    } finally {
                      if (jjtc000) {
                        jjtree.closeNodeScope(jjtn000, true);
                      }
    }
  }

  static final public void inicioprog() throws ParseException {
                      /*@bgen(jjtree) inicioprog */
  SimpleNode jjtn000 = new SimpleNode(JJTINICIOPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(INICIOPROG);
    } finally {
                          if (jjtc000) {
                            jjtree.closeNodeScope(jjtn000, true);
                          }
    }
  }

  static final public void fimprog() throws ParseException {
                   /*@bgen(jjtree) fimprog */
  SimpleNode jjtn000 = new SimpleNode(JJTFIMPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FIMPROG);
    } finally {
                       if (jjtc000) {
                         jjtree.closeNodeScope(jjtn000, true);
                       }
    }
  }

  static final public void se() throws ParseException {
              /*@bgen(jjtree) se */
  SimpleNode jjtn000 = new SimpleNode(JJTSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SE);
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  static final public void senao() throws ParseException {
                 /*@bgen(jjtree) senao */
  SimpleNode jjtn000 = new SimpleNode(JJTSENAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SENAO);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void para() throws ParseException {
                /*@bgen(jjtree) para */
  SimpleNode jjtn000 = new SimpleNode(JJTPARA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PARA);
    } finally {
                    if (jjtc000) {
                      jjtree.closeNodeScope(jjtn000, true);
                    }
    }
  }

  static final public void enquanto() throws ParseException {
                    /*@bgen(jjtree) enquanto */
  SimpleNode jjtn000 = new SimpleNode(JJTENQUANTO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ENQUANTO);
    } finally {
                        if (jjtc000) {
                          jjtree.closeNodeScope(jjtn000, true);
                        }
    }
  }

  static final public void print() throws ParseException {
                 /*@bgen(jjtree) print */
  SimpleNode jjtn000 = new SimpleNode(JJTPRINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINT);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void atribui() throws ParseException {
                   /*@bgen(jjtree) atribui */
  SimpleNode jjtn000 = new SimpleNode(JJTATRIBUI);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ATRIBUI);
    } finally {
                       if (jjtc000) {
                         jjtree.closeNodeScope(jjtn000, true);
                       }
    }
  }

  static final public void maisMais() throws ParseException {
                    /*@bgen(jjtree) maisMais */
  SimpleNode jjtn000 = new SimpleNode(JJTMAISMAIS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIS_MAIS);
    } finally {
                        if (jjtc000) {
                          jjtree.closeNodeScope(jjtn000, true);
                        }
    }
  }

  static final public void menosMenos() throws ParseException {
                      /*@bgen(jjtree) menosMenos */
  SimpleNode jjtn000 = new SimpleNode(JJTMENOSMENOS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MENOS_MENOS);
    } finally {
                          if (jjtc000) {
                            jjtree.closeNodeScope(jjtn000, true);
                          }
    }
  }

  static final public void boolTrue() throws ParseException {
                    /*@bgen(jjtree) boolTrue */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLTRUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BOOL_TRUE);
    } finally {
                        if (jjtc000) {
                          jjtree.closeNodeScope(jjtn000, true);
                        }
    }
  }

  static final public void boolFalse() throws ParseException {
                     /*@bgen(jjtree) boolFalse */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLFALSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BOOL_FALSE);
    } finally {
                         if (jjtc000) {
                           jjtree.closeNodeScope(jjtn000, true);
                         }
    }
  }

  static final public void abreChaves() throws ParseException {
                      /*@bgen(jjtree) abreChaves */
  SimpleNode jjtn000 = new SimpleNode(JJTABRECHAVES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ABRE_CHAVES);
    } finally {
                          if (jjtc000) {
                            jjtree.closeNodeScope(jjtn000, true);
                          }
    }
  }

  static final public void fechaChaves() throws ParseException {
                       /*@bgen(jjtree) fechaChaves */
  SimpleNode jjtn000 = new SimpleNode(JJTFECHACHAVES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FECHA_CHAVES);
    } finally {
                           if (jjtc000) {
                             jjtree.closeNodeScope(jjtn000, true);
                           }
    }
  }

  static final public void separador() throws ParseException {
                     /*@bgen(jjtree) separador */
  SimpleNode jjtn000 = new SimpleNode(JJTSEPARADOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SEPARADOR);
    } finally {
                         if (jjtc000) {
                           jjtree.closeNodeScope(jjtn000, true);
                         }
    }
  }

  static final public void abreParenteses() throws ParseException {
                          /*@bgen(jjtree) abreParenteses */
  SimpleNode jjtn000 = new SimpleNode(JJTABREPARENTESES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ABRE_PARENTESES);
    } finally {
                              if (jjtc000) {
                                jjtree.closeNodeScope(jjtn000, true);
                              }
    }
  }

  static final public void fechaParenteses() throws ParseException {
                           /*@bgen(jjtree) fechaParenteses */
  SimpleNode jjtn000 = new SimpleNode(JJTFECHAPARENTESES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FECHA_PARENTESES);
    } finally {
                               if (jjtc000) {
                                 jjtree.closeNodeScope(jjtn000, true);
                               }
    }
  }

  static final public void abreColchetes() throws ParseException {
                         /*@bgen(jjtree) abreColchetes */
  SimpleNode jjtn000 = new SimpleNode(JJTABRECOLCHETES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ABRE_COLCHETES);
    } finally {
                             if (jjtc000) {
                               jjtree.closeNodeScope(jjtn000, true);
                             }
    }
  }

  static final public void fechaColchetes() throws ParseException {
                          /*@bgen(jjtree) fechaColchetes */
  SimpleNode jjtn000 = new SimpleNode(JJTFECHACOLCHETES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FECHA_COLCHETES);
    } finally {
                              if (jjtc000) {
                                jjtree.closeNodeScope(jjtn000, true);
                              }
    }
  }

  static final public void virgula() throws ParseException {
                   /*@bgen(jjtree) virgula */
  SimpleNode jjtn000 = new SimpleNode(JJTVIRGULA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VIRGULA);
    } finally {
                       if (jjtc000) {
                         jjtree.closeNodeScope(jjtn000, true);
                       }
    }
  }

  static final public void ponto() throws ParseException {
                 /*@bgen(jjtree) ponto */
  SimpleNode jjtn000 = new SimpleNode(JJTPONTO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PONTO);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void aspa() throws ParseException {
                /*@bgen(jjtree) aspa */
  SimpleNode jjtn000 = new SimpleNode(JJTASPA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ASPA);
    } finally {
                    if (jjtc000) {
                      jjtree.closeNodeScope(jjtn000, true);
                    }
    }
  }

  static final public void tipoNumero() throws ParseException {
                      /*@bgen(jjtree) tipoNumero */
  SimpleNode jjtn000 = new SimpleNode(JJTTIPONUMERO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TIPO_NUMERO);
    } finally {
                          if (jjtc000) {
                            jjtree.closeNodeScope(jjtn000, true);
                          }
    }
  }

  static final public void tipoTexto() throws ParseException {
                     /*@bgen(jjtree) tipoTexto */
  SimpleNode jjtn000 = new SimpleNode(JJTTIPOTEXTO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TIPO_TEXTO);
    } finally {
                         if (jjtc000) {
                           jjtree.closeNodeScope(jjtn000, true);
                         }
    }
  }

  static final public void tipoBool() throws ParseException {
                    /*@bgen(jjtree) tipoBool */
  SimpleNode jjtn000 = new SimpleNode(JJTTIPOBOOL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TIPO_BOOL);
    } finally {
                        if (jjtc000) {
                          jjtree.closeNodeScope(jjtn000, true);
                        }
    }
  }

  static final public void tipoFuncao() throws ParseException {
                      /*@bgen(jjtree) tipoFuncao */
  SimpleNode jjtn000 = new SimpleNode(JJTTIPOFUNCAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TIPO_FUNCAO);
    } finally {
                          if (jjtc000) {
                            jjtree.closeNodeScope(jjtn000, true);
                          }
    }
  }

  static final public void opSum() throws ParseException {
                 /*@bgen(jjtree) opSum */
  SimpleNode jjtn000 = new SimpleNode(JJTOPSUM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_SUM);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void opSub() throws ParseException {
                 /*@bgen(jjtree) opSub */
  SimpleNode jjtn000 = new SimpleNode(JJTOPSUB);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_SUB);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void opMul() throws ParseException {
                 /*@bgen(jjtree) opMul */
  SimpleNode jjtn000 = new SimpleNode(JJTOPMUL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_MUL);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void opDiv() throws ParseException {
                 /*@bgen(jjtree) opDiv */
  SimpleNode jjtn000 = new SimpleNode(JJTOPDIV);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_DIV);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void opMod() throws ParseException {
                 /*@bgen(jjtree) opMod */
  SimpleNode jjtn000 = new SimpleNode(JJTOPMOD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_MOD);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void opAnd() throws ParseException {
                 /*@bgen(jjtree) opAnd */
  SimpleNode jjtn000 = new SimpleNode(JJTOPAND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_AND);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

  static final public void opOr() throws ParseException {
                /*@bgen(jjtree) opOr */
  SimpleNode jjtn000 = new SimpleNode(JJTOPOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_OR);
    } finally {
                    if (jjtc000) {
                      jjtree.closeNodeScope(jjtn000, true);
                    }
    }
  }

  static final public void opGt() throws ParseException {
                /*@bgen(jjtree) opGt */
  SimpleNode jjtn000 = new SimpleNode(JJTOPGT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_GT);
    } finally {
                    if (jjtc000) {
                      jjtree.closeNodeScope(jjtn000, true);
                    }
    }
  }

  static final public void opLt() throws ParseException {
                /*@bgen(jjtree) opLt */
  SimpleNode jjtn000 = new SimpleNode(JJTOPLT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_LT);
    } finally {
                    if (jjtc000) {
                      jjtree.closeNodeScope(jjtn000, true);
                    }
    }
  }

  static final public void opEq() throws ParseException {
                /*@bgen(jjtree) opEq */
  SimpleNode jjtn000 = new SimpleNode(JJTOPEQ);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_EQ);
    } finally {
                    if (jjtc000) {
                      jjtree.closeNodeScope(jjtn000, true);
                    }
    }
  }

  static final public void opDif() throws ParseException {
                 /*@bgen(jjtree) opDif */
  SimpleNode jjtn000 = new SimpleNode(JJTOPDIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OP_DIF);
    } finally {
                     if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

// Fim das Declaracoes Redundantes
  static final public void idNome() throws ParseException {
 /*@bgen(jjtree) idNome */
  SimpleNode jjtn000 = new SimpleNode(JJTIDNOME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g = First.idNome;
    try {
      try {
        letra();
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LETRA_MAIUSCULA:
          case LETRA_MINUSCULA:
          case NUMERO:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LETRA_MAIUSCULA:
          case LETRA_MINUSCULA:
            texto();
            break;
          case NUMERO:
            numero();
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (ParseException e) {
    consumeUntil(g, e, "idNome");
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void executarFuncao() throws ParseException {
 /*@bgen(jjtree) executarFuncao */
  SimpleNode jjtn000 = new SimpleNode(JJTEXECUTARFUNCAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g = First.executarFuncao;
    try {
      try {
        abreParenteses();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOL_TRUE:
        case BOOL_FALSE:
        case ABRE_PARENTESES:
        case ABRE_COLCHETES:
        case ASPA:
        case LETRA_MAIUSCULA:
        case LETRA_MINUSCULA:
        case NUMERO:
          expressao();
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case VIRGULA:
              ;
              break;
            default:
              jj_la1[2] = jj_gen;
              break label_2;
            }
            virgula();
            expressao();
          }
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        fechaParenteses();
      } catch (ParseException e) {
    consumeUntil(g, e, "executarFuncao");
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//void crementos() :
//{}
//{
//  (idNome() atribuicao())
//  | (idNome() maisMais())
//  | (idNome() menosMenos())
//  | (maisMais() idNome())
//  | (menosMenos() idNome())
//}
  static final public void dado() throws ParseException {
 /*@bgen(jjtree) dado */
  SimpleNode jjtn000 = new SimpleNode(JJTDADO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet g = First.dado;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOL_TRUE:
        case BOOL_FALSE:
        case ABRE_COLCHETES:
        case ASPA:
        case NUMERO:
          constante();
          break;
        case LETRA_MAIUSCULA:
        case LETRA_MINUSCULA:
          chamadorDeIdNome();
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
    consumeUntil(g, e, "dado");
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
